# typesense

./: .env.example  .gitignore  DEBUG_PLAN.md  LICENSE  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: docker-build-push.yml  test-local.yml  typesense-daily-load.yml  typesense-full-reload.yml
docs/: development.md
scripts/: create_search_key.py  load_data.py
src/typesense_dgb/: dataset.py
